<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/recurrence_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/daily_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily"/>

        <RadioButton
            android:id="@+id/weekly_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly"/>

        <RadioButton
            android:id="@+id/monthly_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly"/>

        <RadioButton
            android:id="@+id/semiannual_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semiannual"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/define_recurrence_button"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/background"
        android:text="@string/define_recurrence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>