<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/duration_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/one_month_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_month"/>

        <RadioButton
            android:id="@+id/two_month_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_month"/>

        <RadioButton
            android:id="@+id/six_month_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_month"/>

        <RadioButton
            android:id="@+id/one_year_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_year"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/define_duration_button"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/background"
        android:text="@string/define_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
